# dualboot_chat_sockets

./: .gitignore  README.md  client.py  pyproject.toml  server.py
