[tool.poetry]
name = "dualboot-chat-sockets"
version = "0.1.0"
description = ""
authors = ["Kazakov Kostya <leap74rus@gmail.com>"]
readme = "README.md"
packages = [{include = "dualboot_chat_sockets"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
